@@ -14,10 +14,10 @@
 <div class='col-2'>
 <?php $boton= TbHtml::buttonDropdown('Buscar', array(
     array('label' => 'Referencia', 'url' => '#','class'=>'tipo','data-tipo'=>'venta'),
-    array('label' => 'No. boleto', 'url' => '#','class'=>'tipo','data-tipo'=>'boleto'),
-    array('label' => 'Reimpresión', 'url' => '#','class'=>'tipo','data-tipo'=>'reimpresion'),
+    array('label' => 'No. Boleto', 'url' => '#','class'=>'tipo','data-tipo'=>'boleto'),
+    array('label' => 'No. Boleto Reimpreso', 'url' => '#','class'=>'tipo','data-tipo'=>'reimpresion'),
     TbHtml::menuDivider(),
-    array('label' => 'Reservados', 'url' => '#','class'=>'tipo','data-tipo'=>'reservado'),
+    array('label' => 'Reservación Farmatodo', 'url' => '#','class'=>'tipo','data-tipo'=>'reservado'),
 ), array('color' => TbHtml::BUTTON_COLOR_PRIMARY)); ?>
 		<?php echo TbHtml::textFieldControlGroup('ref',$ref>0?$ref:'',
 				array(
@@ -89,6 +89,10 @@ if (isset($ref) and !empty($ref)) {
 				array(
 						'header'=>'FilasAli',
 						'value'=> '$data->fila->FilasAli'
+				),
+				array(
+						'header'=>'Asiento',
+						'value'=> '$data->lugar->LugaresLug'
 				)
 		);
 		if ($tipo!='reservado'){
